--- a/_layouts/maps.html
+++ b/_layouts/maps.html
@@ -15,8 +15,9 @@
   <meta name="apple-mobile-web-app-title" content="LufelNet" />
   <link rel="manifest" href="{{ site.baseurl }}/assets/img/favicon/site.webmanifest" />
 
-  <title>{% if page.title %}{{ page.title }}{% else %}지도 뷰어 - P5X 루페르넷{% endif %}</title>
-  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}P5X 맵 뷰어. 팰리스와 메멘토스의 모든 맵을 확인하세요.{% endif %}">
+  {% assign lang = page.url | split: "?" | last | split: "&" | first | replace: "lang=", "" %}
+  <title>{% if page.title %}{{ page.title }}{% elsif lang == "en" %}P5X Maps - Lufelnet{% elsif lang == "jp" %}P5X マップス - ルフェルネット{% else %}P5X 맵스 - 루페르넷{% endif %}</title>
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% elsif lang == "en" %}Explore all P5X Palaces and Mementos.{% elsif lang == "jp" %}P5X マップビューアー。パレスとメメントスの全マップを確認してください{% else %}P5X 맵 뷰어. 팰리스와 메멘토스의 모든 맵을 확인하세요.{% endif %}">
 
   {% if page.alternate_urls %}
   <link rel="alternate" hreflang="ko" href="{{ site.url }}/maps/" />
